cmake_minimum_required(VERSION 2.8.4)
project(osv)

include_directories(include . bsd/x64 arch/x64)

add_definitions(-std=gnu++11)
add_definitions(-D_KERNEL)

AUX_SOURCE_DIRECTORY(core SOURCE_FILES)
AUX_SOURCE_DIRECTORY(bsd/sys/netinet SOURCE_FILES)
AUX_SOURCE_DIRECTORY(bsd/sys/net SOURCE_FILES)
AUX_SOURCE_DIRECTORY(bsd/sys/kern SOURCE_FILES)
AUX_SOURCE_DIRECTORY(bsd/sys/dev/random SOURCE_FILES)
AUX_SOURCE_DIRECTORY(bsd/sys/crypto/rijndael SOURCE_FILES)
AUX_SOURCE_DIRECTORY(bsd/sys/crypto/sha2 SOURCE_FILES)
AUX_SOURCE_DIRECTORY(bsd/porting SOURCE_FILES)
AUX_SOURCE_DIRECTORY(arch/x64 SOURCE_FILES)
AUX_SOURCE_DIRECTORY(drivers SOURCE_FILES)
AUX_SOURCE_DIRECTORY(fs SOURCE_FILES)
AUX_SOURCE_DIRECTORY(fs/procfs SOURCE_FILES)
AUX_SOURCE_DIRECTORY(fs/devfs SOURCE_FILES)
AUX_SOURCE_DIRECTORY(fs/vfs SOURCE_FILES)
AUX_SOURCE_DIRECTORY(fs/ramfs SOURCE_FILES)

add_executable(osv ${SOURCE_FILES})
